--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         </p>
         <app-user-icon></app-user-icon>   
         </div>
-      <div class="flex flex-row justify-start w-full">
+      <div class="flex flex-col justify-start w-full">
         <div class="w-2/5 h-full flex flex-col justify-between m-2">
           <div
             class="card w-full h-[38vh] bg-slate-100 shadow-md relative rounded-lg"
@@ -23,13 +23,6 @@
             <div class="mt-3">
               <p class="text-md font-normal">Neto</p>
               <div class="w-3/5 bg-cyan-400 h-2 rounded-lg"></div>
-            </div>
-          </div>
-          <div class="card w-full  bg-slate-100 shadow-md relative rounded-lg h-[38vh]">
-            <div class="relative">
-              <canvas id="canvas" >
-                {{chart}}
-              </canvas>
             </div>
           </div>
         </div>
@@ -62,13 +55,7 @@
               Ultima actualizacion hace 5s...
             </p>
           </div>
-          <div class="card w-full  bg-slate-100 shadow-md relative rounded-lg h-[38vh]">
-            <div class="relative">
-              <canvas id="canvasito" >
-                {{chart}}
-              </canvas>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
