--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -12,40 +12,40 @@
               </div>
         </div>
         <!--Lado derecho del modal (Formulario de registro-->
-        <div class="flex flex-col justify-center h-full w-1/2 rounded-r-2xl bg-stone-100 opacity-80 ">
+        <div class="flex flex-col justify-center h-full w-1/2 rounded-r-2xl bg-stone-100 opacity-90">
             <div class="flex flex-col w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 items-center content-center">
                 <h1 class="text-gray-700 xl:text-2xl font-bold my-5">Inicia sesión</h1>
                 <p>¿No tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/sign-up">Regístrate</a></span></p>
-
             </div>
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
             <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                   Email
             </label>
-            <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo"/>
+            <input #AsInputUsuario id="InputUsuario" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo"/>
             </div>
 
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
             <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                 Contraseña: 
             </label>
-            <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña"/>
+            <input #AsInputContrasena id="InputContrasena" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña"/>
             </div>
 
             <div class=" flex justify-around w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
                 <label class="items-center flex tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
-                    <input type="checkbox" placeholder="recuerdame" class="mx-2"> <p>Recuerdame</p>
+                    <input type="checkbox" placeholder="recuerdame" class="mx-2 cursor-pointer"> <p>Recuérdame</p>
                 </label>
                 
                 <label class="items-center tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
-                    <a routerLink="">¿Olvidaste tu contraseña?</a> 
+                    <a routerLink="/forgotpassword">¿Olvidaste tu contraseña?</a> 
                 </label>
                 
             </div> 
             <div class="flex justify-center items-center w-full">
-                <a routerLink=""> 
-                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3">
-                    Inicia sesión</button>
+                <a [routerLink]="ruta"> 
+                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3" (click)="validarLogin()">
+                    Inicia sesión
+                    </button>
                 </a>
             </div>
             </div>
