--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-500 shadow-xl rounded-lg relative py-8">
     <div class="justify-start flex flex-row">
          <!--Boton buscar-->
-    <div class="m-3 py-5 px-4 h-8 w-96 bg-white shadow-md rounded-lg cursor-pointer flex items-center text-sm">
+    <div class="m-3 py-5 px-4 h-8 2xl:w-5/6 xl:w-46 bg-white shadow-md rounded-lg cursor-pointer flex items-center text-sm">
         <input [(ngModel)]="productText" (keyup)="onPropagarMensaje()" class="p-5 px-2 h-8 w-96 outline-0 rounded-lg " type="text"  placeholder="Buscar...">
-        <button (click)="onPropagarMensaje()" class="p-4 hover:scale-110 ease-in-out duration-300">
+        <button (click)="onPropagarMensaje()" class="pl-4 hover:scale-110 ease-in-out duration-300">
             <i class="fa-solid fa-magnifying-glass justify-end"></i>
         </button>
     </div>
