--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -1,13 +1,11 @@
-<div class="flex flex-col w-full border-4 relative z-10">
-    <a routerLink="/log-in">
-        <button class="w-10 h-10 rounded-full shadow-md bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
+<div class="flex flex-col w-full relative z-10 ">
+
+        <button (click)="onClick()" class="w-10 h-10 rounded-full shadow-md bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
             <img src="../../../assets/img/user.png" alt=""/>
         </button>
-        <div class="bg-white flex flex-col rounded mt-1 p-3 text-sm absolute right-5">
-            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Auditory</a>
-            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Profile</a>
-            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">settings</a>
-            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Log-out</a>
+        <div #AsDropdown id="dropdown" class="bg-white hidden flex-col rounded mt-11 p-3 text-sm absolute right-6 shadow-lg">
+            <a routerLink="" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-id-badge px-2"></i>Perfil</a>
+            <a routerLink="" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-gear px-2"></i>Ajustes</a>
+            <a routerLink="/log-in" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-right-from-bracket px-2"></i>Salir</a>
         </div>
-    </a>
 </div>
